keycloak/keycloak-http.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
    release: keycloak
  name: keycloak-http
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: keycloak
    release: keycloak
  sessionAffinity: None
  type: NodePort
