keycloak/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
  labels:
    app: keycloak
    release: keycloak
  name: keycloak
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: keycloak-http
          servicePort: http
        path: /*
  tls:
  - secretName: authcen-tls # kubectl create secret tls authcen-tls --cert="tls.crt" --key="tls.key"
